# PhotonMapping

./: ACG-MiniCW-3.sln  CMakeLists.txt  opencv_world343.dll.REMOVED.git-id  opencv_world344d.dll.REMOVED.git-id  readme.md
ACG-MiniCW-3/: ACG-MiniCW-3.aps  ACG-MiniCW-3.cpp  ACG-MiniCW-3.vcxproj  ACG-MiniCW-3.vcxproj.filters  BRDF.cpp  BRDF.h  BoundingBox.cpp  BoundingBox.h  Box.cpp  Box.h  CW2-recap.cpp  Camera.cpp  Camera.h  ClassDiagram.cd  Common.cpp  Common.h  DirectionalLight.cpp  DirectionalLight.h  Light.h  Material.h  Mesh.cpp  Mesh.h  Object.h  ObjectInstance.cpp  ObjectInstance.h  Orientation.cpp  Orientation.h  Photon.h  PhotonMap.cpp  PhotonMap.h  PhotonTree.cpp  PhotonTree.h  Plane.cpp  Plane.h  PointLight.cpp  PointLight.h  ProjectionMap.cpp  ProjectionMap.h  Ray.cpp  Ray.h  (+14 more)
ACG-MiniCW-3/Debug/: ACG-MiniCW-3.pch  vc141.idb
ACG-MiniCW-3/Debug/ACG-MiniCW-3.tlog/: ACG-MiniCW-3.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ACG-MiniCW-3/x64/Debug/: ACG-MiniCW-3.pch.REMOVED.git-id  acg-minicw-3.obj.enc  vc141.idb
ACG-MiniCW-3/x64/Debug/ACG-MiniCW-3.tlog/: ACG-MiniCW-3.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
Debug/: ACG-MiniCW-3.ilk
x64/Debug/: ACG-MiniCW-3.ilk  opencv_world343d.dll.REMOVED.git-id
